Exercise 4 code cleanup and improvements re beta run discussions

--- a/Exercise 4/Completed/Planets/Planets.iOS/Planets.iOS.csproj
+++ b/Exercise 4/Completed/Planets/Planets.iOS/Planets.iOS.csproj
@@ -161,4 +161,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\eris.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon%403x.png" />
+  </ItemGroup>
 </Project>
