Ex2 & Ex3 minor cleanup

--- a/Exercise 2/Completed/Astronomy.iOS/Astronomy.iOS.csproj
+++ b/Exercise 2/Completed/Astronomy.iOS/Astronomy.iOS.csproj
@@ -151,6 +151,15 @@
   <ItemGroup>
     <BundleResource Include="Resources\starfield.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\nav-menu-icon%403x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
