Ex4: Update packages and fix broken Android resource.

--- a/Exercise 4/Completed/Planets/Planets.UWP/Planets.UWP.csproj
+++ b/Exercise 4/Completed/Planets/Planets.UWP/Planets.UWP.csproj
@@ -157,8 +157,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.12" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Planets\Planets.csproj">
